[feature]新增轮播图跳转至招生简章与无跳转类型

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -712,11 +712,13 @@
 								<li class="type2"><p><em data-type="2"></em></p>直播</li>
 								<li class="type4"><p><em data-type="4"></em></p>医案</li>
 								<li class="type3"><p><em data-type="3"></em></p>专栏文章</li>
+								<li class="type5"><p><em data-type="5"></em></p>招生简章</li>
+								<li class="type6"><p><em data-type="6"></em></p>不跳转</li>
 							</ul>
 							<p class="banner-all-tip banner-error-style hide">请选择类型！</p>
 						</div>
 						<!--链接到-->
-						<div class="banner-url-wrap">
+						<div class="banner-url-wrap J-linkParam-div">
 							<p class="left-title" style="display: inline-block;"><span>*</span>链接到</p>
 							<form id="resetSelect" style="display: inline-block;">
 								<label for="posts_resource_select"></label>
