--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -29,6 +29,11 @@
 <!--公用弹框 -->
 <link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
+<!--刷新 -->
+<link rel="stylesheet" href="/xcview/css/mescroll.min.css">
+<script type="text/javascript" src="/xcview/js/common/mescroll.min.js"></script>
+<!--刷新css引入-->
+<link rel="stylesheet" href="/xcview/css/mui.min.css">
 
 <!-- 表情包聊天引入 -->
 <link href="/xcview/html/physician/css/webiaoqing.css" rel="stylesheet" type="text/css">
@@ -164,7 +169,34 @@
 	.rests_nav{
 		background: none;
 	}
+	/*处理刷新效果*/
+	.mui-scroll-wrapper{
+		top: 1.1rem;
+	}
+	.mui-pull-top-pocket{
+		top: 0;
+	}
+	.mui-scroll-wrapper{
+		height: 100%;
 
+	}
+	.mui-pull-bottom-pocket .mui-pull{
+		bottom: 1rem;
+	}
+	.bought_main{
+		padding-bottom: 0.6rem;
+	}
+	.mui-pull-bottom-pocket .mui-pull{
+		bottom: 0rem;
+		height: 40px;
+		line-height: 40px;
+	}
+	.mui-pull-bottom-pocket{
+		position: relative;
+		bottom: 1rem;
+		height: 40px;
+		line-height: 40px;
+	}
 </style>
 
 </head>
@@ -378,9 +410,8 @@
 				<div class="both"></div>
 				{{/if}}
 				<div class="rests_nav_bottom ">
-					{{if item.createTime < item.now}}
-					<span class="time">6小时前
 
+					<span class="time">{{item.dateStr}}
 					{{if item.typeId==8}}
 						<span class="basis_tips">医案</span>
 					{{else if item.articleId!= null}}
@@ -395,23 +426,6 @@
 						<span class="basis_tips">线下课</span>
 					{{/if}}
 					</span>
-					{{else}}
-					<span class="time">{{item.createTime}}
-					{{if item.typeId==8}}
-						<span class="basis_tips">医案</span>
-					{{else if item.articleId!= null}}
-						<span class="basis_tips">文章</span>
-					{{else if item.courseId != null && item.courseType == 1}}
-						<span class="basis_tips">线上课</span>
-					{{else if item.courseId != null && item.courseType == 2}}
-						<span class="basis_tips">线上课</span>
-					{{else if item.courseId != null && item.courseType == 3}}
-						<span class="basis_tips">直播课</span>
-					{{else if item.courseId != null && item.courseType == 4}}
-						<span class="basis_tips">线下课</span>
-					{{/if}}
-					</span>
-					{{/if}}
 
 					{{if item.isPraise}}
 					<span class="img"><img src="/xcview/images/zan001.png" alt="" class="zan_img" data-id="{{item.id}}"/><img src="/xcview/images/returned.png" alt="" class="evaluate_img" data-id="{{item.id}}"/></span>
