--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -52,6 +52,16 @@
 </script>
 
 <style>
+	.physicians_page_mains {
+		position: fixed;
+		top: 0;
+		left: 50%;
+		margin-left: -3.75rem;
+	}
+	.mui-pull-bottom-pocket .mui-pull{
+		bottom: -0.8rem !important;
+	}
+
 	/*轮播开始*/
 	.swiper-container{
 		width: 7.5rem !important;
@@ -172,13 +182,15 @@
 	/*处理刷新效果*/
 	.mui-scroll-wrapper{
 		top: 1.1rem;
+
 	}
 	.mui-pull-top-pocket{
 		top: 0;
 	}
 	.mui-scroll-wrapper{
 		height: 100%;
-
+	    position: fixed;
+	    top: 5.4rem;
 	}
 	.mui-pull-bottom-pocket .mui-pull{
 		bottom: 1rem;
@@ -1007,10 +1019,11 @@ $(window).bind("scroll", function() {
 		    $(".essay_main").addClass("essay_pack_up_add");
 	    });
 
-
+	    // 点击全部动态
 		$(".li_data").click(function(){
 			$(".anchor_navigation .border").css("left","1.04rem");
 			$(".li_data").addClass("li_color");
+			$(".physicians_page_main").addClass("physicians_page_mains");
 			$(".li_course").removeClass("li_color");
 			$(".li_evaluate").removeClass("li_color");
 			$(".li_data_hide").removeClass("hide");
@@ -1023,11 +1036,14 @@ $(window).bind("scroll", function() {
 			$(".the_dynamic").show();   //全部动态隐藏
 			$(".message_referral").hide();   //介绍结束
 		});
+
+		// 点击直播间
 		$(".li_course").click(function(){
 			$(".anchor_navigation .border").css("left","3.5rem");
 			$(".li_data").removeClass("li_color");
 			$(".li_course").addClass("li_color");
 			$(".li_evaluate").removeClass("li_color");
+			$(".physicians_page_main").removeClass("physicians_page_mains");
 			$(".li_data_hide").addClass("hide");
 			$(".li_course_hide").removeClass("hide");
 			$(".li_evaluate_hide").addClass("hide");
@@ -1040,11 +1056,13 @@ $(window).bind("scroll", function() {
 			$(".message_referral").hide();  //介绍结束
 			// $(".broadcastroom").show();
 		});
+		// 点击介绍
 		$(".li_evaluate").click(function(){
 			$(".anchor_navigation .border").css("left","5.94rem");
 			$(".li_data").removeClass("li_color");
 			$(".li_course").removeClass("li_color");
 			$(".li_evaluate").addClass("li_color");
+			$(".physicians_page_main").removeClass("physicians_page_mains");
 			$(".li_data_hide").addClass("hide");
 			$(".li_course_hide").addClass("hide");
 			$(".li_evaluate_hide").removeClass("hide");
@@ -1275,5 +1293,17 @@ $(window).bind("scroll", function() {
     	$(".remove_copy").hide();
     });
 </script>
+<script type="text/javascript">
+	// window.onload = function(){
 
+		$(function(){
+			var school_height=$(window).height()-$(".swiper-container").height()-$(".referral").height()-$("#mainMenuBar").height();
+		$("#refreshContainer").height(school_height);
+		});
+//		处理底部高度
+		/*var school_height=$(window).height()-$(".swiper-container").height()-$(".referral").height()-$("#mainMenuBar").height();
+		$("#refreshContainer").height(school_height);*/
+		// alert(school_height);
+	// };
+</script>
 </html>
