--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -673,7 +673,7 @@
 		</li>
 		<li  data-name="menu=2-1">
 			<div class="link"><i class="iconfont icon-qianbao left_range"></i>我的资产</div>
-			<ul class="submenu">
+			<ul class="submenu hide">
 				<!--<li><a href="#">Javascript</a></li>
 				<li><a href="#">jQuery</a></li>
 				<li><a href="#">Frameworks javascript</a></li> -->
@@ -1010,7 +1010,7 @@
 	
 	
 					<!--这是分页-->
-					<div class="pages collection_pages" style="display:none">
+					<div class="pages collection_pages" style="display:none" style="padding-bottom: 20px;">
 						<div id="Pagination_collection" class="pagination-pages"></div>
 						<div class="searchPage">
 							<span class="page-sum">共<strong class="allPage">0</strong>页</span>
