医案添加默认图--评价空状态

--- a/wechat/src/main/webapp/xcview/html/physician/consilia.html
+++ b/wechat/src/main/webapp/xcview/html/physician/consilia.html
@@ -80,6 +80,10 @@
 				<p class="border"></p>
 				<p>评价</p>
 			</div>
+			<div class="show_baseImagenumber">
+				<img src="/xcview/images/no_comment.png" alt="" />
+				<p>还没有评价？快来抢沙发呀~</p>
+			</div>
 
 			<div class="wrap_all_returned">
 				<script type="text/html" id="broadcastroom_id">
