--- a/wechat/src/main/webapp/xcview/html/physician/consilia.html
+++ b/wechat/src/main/webapp/xcview/html/physician/consilia.html
@@ -199,6 +199,7 @@
 <script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script> 
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>    <!--数据模板引入-->
 <script type="text/javascript" src="/xcview/js/physician/consilia.js"></script> 
+<script type="text/javascript" src="/xcview/js/share/share.js?v=wechat_1.1.1"></script>
 <script>
 	window.onload = function(){
 
