介绍整合--table选项

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -860,23 +860,23 @@
 			    </tr>
 			    <tr class="am">
 			        <th>上午</th>
-			        <td class="am_monday"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="am_tuesday"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="am_wednesday"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="am_thursday"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="am_friday"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="am_saturday"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="am_sunday"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm1_1 am_monday"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm2_1 am_tuesday"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm3_1 am_wednesday"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm4_1 am_thursday"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm5_1 am_friday"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm6_1 am_saturday"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm7_1 am_sunday"><img src="/xcview/images/default.png" alt="" /></td>
 			    </tr>
 			    <tr class="pm">
 			        <th>下午</th>
-			        <td class="pm_mondays"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="pm_tuesdays"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="pm_wednesdays"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="pm_thursdays"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="pm_fridays"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="pm_saturdays"><img src="/xcview/images/default.png" alt="" /></td>
-			        <td class="pm_sundays"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm1_2 pm_mondays"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm2_2 pm_tuesdays"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm3_2 pm_wednesdays"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm4_2 pm_thursdays"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm5_2 pm_fridays"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm6_2 pm_saturdays"><img src="/xcview/images/default.png" alt="" /></td>
+			        <td class="apm apm7_2 pm_sundays"><img src="/xcview/images/default.png" alt="" /></td>
 			    </tr>
 			</table>
 			
