修改点击全部动态。。

--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -374,7 +374,7 @@
 
 	<div class="wrapAll_comment">
 		<script type="text/html" id="id_show_xingxing">
-			<p class="set_title">发布评价</p>
+			<p class="set_title">发表评价</p>
 			{{if items==1}}
 		<!--星星五星好评-->
 		<div class="my_impression1 cl mar_bot">
@@ -386,9 +386,10 @@
 			<img src="../images/xing1.png"/>
 			<span></span>
 		</div>
-		<!--主播演绎好评-->
-		<div class="my_impression2 cl mar_bot">
-			<p>主播演绎</p>
+		
+		<!--节目内容好评-->
+		<div class="my_impression3 cl" style="padding-bottom: 0.3rem;overflow: hidden;">
+			<p>节目内容</p>
 			<img src="../images/face0.png"/>
 			<img src="../images/face0.png"/>
 			<img src="../images/face0.png"/>
@@ -396,9 +397,9 @@
 			<img src="../images/face0.png"/>
 			<span></span>
 		</div>
-		<!--节目内容好评-->
-		<div class="my_impression3 cl">
-			<p>节目内容</p>
+		<!--主播演绎好评-->
+		<div class="my_impression2 cl mar_bot" style="padding-bottom: 0;">
+			<p>主播演绎</p>
 			<img src="../images/face0.png"/>
 			<img src="../images/face0.png"/>
 			<img src="../images/face0.png"/>
@@ -417,7 +418,7 @@
 			<p class="detailed_comments">详细评价</p>
 			{{/if}}
 		<div class="text_write_box">
-			<textarea name="" id="comment_detailed" rows="" cols="" placeholder="写评价，给主播评价一下"></textarea>
+			<textarea name="" id="comment_detailed" rows="" cols=""></textarea>
 		</div>
 		<!--表情/提交评价-->
 		<ul class="brow_btn">
