修改动态及医馆bug

--- a/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -29,6 +29,7 @@
 		<link rel="stylesheet" href="/web/css/style.css" />
 		<link rel="stylesheet" href="/web/css/index-9a525196fb.css" type="text/css">
 		<link rel="stylesheet" href="/web/css/iconfont/iconfont.css" />
+		<link rel="stylesheet" href="/web/fonts/style.css" />
 
 		<script src="/web/js/jquery-1.12.1.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="/web/js/artTemplate.js"></script>
@@ -90,7 +91,7 @@
 								<!--<p style="text-overflow: ellipsis;white-space: nowrap;overflow: hidden;padding: 0 20px;"></p>-->
 							</li>
 							<li class="active hos_point">
-								<a href="#hos_Administration" aria-controls="doc_talk" data-name="hosAdm" role="tab" data-toggle="tab" class="luntan color"><span class="icon iconfont icon-02_dianpuguanli color" aria-hidden="true" style="margin-left: 33px;"></span>医馆管理
+								<a href="#hos_Administration" aria-controls="doc_talk" data-name="hosAdm" role="tab" data-toggle="tab" class="luntan color"><i class="iconfont icomoon-icon-yiguan color"></i>医馆管理
 									<div class="luntan_list" style="display: block;">
 										<div>
 											<a href="javascript:;" data-name="hos_base_inf" id="hos_base_inf" class="hide">医馆基础信息</a>
@@ -103,13 +104,13 @@
 								<span class="glyphicon glyphicon-triangle-bottom hos_point_icon" aria-hidden="true"></span>
 							</li>
 							<li class="hide" id="doc_Administration_tabBtn">
-								<a href="#doc_Administration" data-name="docAdm" aria-controls="doc_money" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>医师管理</a>
+								<a href="#doc_Administration" data-name="docAdm" aria-controls="doc_money" role="tab" data-toggle="tab"><i class="iconfont icomoon-icon-woshiyishi"></i>医师管理</a>
 							</li>
 							<li class="hide" id="collect_Administration_tabBtn">
-								<a href="#recruit_Administration" data-name="colAdm" aria-controls="doc_idCard" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>招聘管理</a>
+								<a href="#recruit_Administration" data-name="colAdm" aria-controls="doc_idCard" role="tab" data-toggle="tab"><i class="iconfont icomoon-icon-zhaopin"></i>招聘管理</a>
 							</li>
 							<li class="hide" id="news_Administration_tabBtn">
-								<a href="#Notice_Administration" data-name="newAdm" aria-controls="doc_Distinguish" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>公告管理</a>
+								<a href="#Notice_Administration" data-name="newAdm" aria-controls="doc_Distinguish" role="tab" data-toggle="tab"><i class="iconfont icomoon-icon-gonggao"></i>公告管理</a>
 							</li>
 						</ul>
 					</div>
