--- a/wechat/src/main/webapp/xcview/html/school_class.html
+++ b/wechat/src/main/webapp/xcview/html/school_class.html
@@ -132,9 +132,9 @@
 			</div>     
 		</div>
 		<!-- 点击收起隐藏 -->
-		<!-- <div class="btn1" style="display: none;">
+		<div class="btn1">
 			<img src="../images/top.png"/>
-		</div> -->
+		</div> 
 		<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #D8DDE6;">
 			
 		</div>
@@ -157,9 +157,9 @@
 			
 		</div>
 		<!-- 点击收起隐藏 -->
-		<!-- <div class="btn" style="display: none;">
+		 <div class="btn">
 			<img src="../images/top.png"/>
-		</div> -->
+		</div> 
 <!--详情结束-->
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
