--- a/wechat/src/main/webapp/xcview/html/physician/article.html
+++ b/wechat/src/main/webapp/xcview/html/physician/article.html
@@ -171,10 +171,10 @@
 
 		<!-- 评价信息 -->
 		<div class="bg_modal"></div>
-		<div class="wrapAll_comment"><p class="set_title" >发布评价</p>
+		<div class="wrapAll_comment"><p class="set_title" >发表评价</p>
 			
 		<div class="text_write_box">
-			<textarea name="" id="comment_detailed" rows="" cols="" placeholder="写评价，给医案评价一下"></textarea>
+			<textarea name="" id="comment_detailed" rows="" cols="" placeholder="写评价，给文章评价一下"></textarea>
 		</div>
 		<!--表情/提交评价-->
 		<ul class="brow_btn">
