--- a/wechat/src/main/webapp/xcview/html/all_comment.html
+++ b/wechat/src/main/webapp/xcview/html/all_comment.html
@@ -81,7 +81,7 @@
 		<div class="wp">
 			<div class="wrap-header">
 				<div class="header">		
-					<p>评价</p>
+					<p>全部评价</p>
 					<div class="arror_return z" onclick="javascript:history.back(-1);">
 						<img src="../images/back icon.png"/>
 					</div>
