--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -181,7 +181,7 @@
 				<!--swiper小白班结束-->
 				<!--swiper推荐名师开始-->	                    	
             	<div class="swiper_box" id="doctor_follow">
-            		<p style="padding-top: 0.3rem;padding-bottom: 0.2rem;">名师推荐</p>
+            		<p style="padding-top: 0.3rem;padding-bottom: 0.2rem;">推荐名师</p>
                 	<div class="swiper-container">
 				        <div class="swiper-wrapper" id="phy_box">
 				        	<script type="text/html" id="wrap_phy">
