--- a/wechat/src/main/webapp/xcview/html/live_personal.html
+++ b/wechat/src/main/webapp/xcview/html/live_personal.html
@@ -201,7 +201,7 @@
 		<div class="wrap_vedio" style="padding-bottom: 0;" id="my_class">
 			<div class="" onclick="btn_class1()">
 				<span class="border"></span>
-				<span style="font-size: 0.28rem;">全部课程</span>
+				<span style="font-size: 0.28rem;" class="border_span">全部课程</span>
 				<!-- <p class="more_right"><a href="javascript:;"><img src="../images/rightj.png"/></a></p> -->
 			</div>
 			<ul class="wrap_vedio_btn" id="wrap_vedio_btn">
