--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -324,7 +324,7 @@
 	<div class="wrapLittle_comment">
 		<p class="detailed_comments little_comment">详细评价</p>
 		<div class="text_write_box">
-			<textarea id="littlt_return" name="" rows="" cols="" placeholder="写评价，给主播评价一下"></textarea>
+			<textarea id="littlt_return" name="" rows="" cols=""></textarea>
 		</div>
 		<!--表情/提交评价-->
 		<ul class="brow_btn">
@@ -338,7 +338,7 @@
 	<div class="bg_modal"></div>
 	<div class="wrapAll_comment">
 		<script type="text/html" id="id_show_xingxing">
-			<p class="set_title">发布评价</p>
+			<p class="set_title">发表评价</p>
 			{{if items==1}}
 			<!--星星五星好评-->
 			<div class="my_impression1 cl mar_bot">
