--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1228,7 +1228,7 @@ $(window).bind("scroll", function() {
             $("#page_emotion").css("bottom","0");
             $(".face").attr("src","/xcview/images/jianpan.png");
 	    });	*/
-		$(".face").toggle(function(){
+		/*$(".face").toggle(function(){
 	    	$(".comment").css("bottom","2.8rem");
             $("#page_emotion").css("bottom","0");
             $(".face").attr("src","/xcview/images/jianpan.png");
@@ -1236,7 +1236,7 @@ $(window).bind("scroll", function() {
 		    $(".comment").css("bottom","0rem");
             $("#page_emotion").css("bottom","-2.8rem");
             $(".face").attr("src","/xcview/images/face.png");
-	    });
+	    });*/
     // 点击底部评论textarea结束
 
     // 点击发送开始
