--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -136,7 +136,8 @@
 						{{else if startLevel == 5}}
 						<img src="../images/xing5.png"/>
 						{{/if}}
-						<a href="javascript:;">共<span id="criticizeCountId">{{criticizeCount}}</span>条评价</a>
+						<a href="javascript:;">共<span id="criticizeCountId">{{criticizeCount}}</span>条评价 <img src=
+						"../images/video_review.png" style="width: 0.15rem;height: 0.25rem;display: inline-block;margin-top: 0.06rem;" /></a>
 					</li>
 				</ul>
 				
@@ -181,7 +182,7 @@
 			</script>			
 		</div>
 <!--详情开始-->
-	<p class="my_details">详情</p>
+	<!-- <p class="my_details">详情</p> -->
 	<!--简介-->
 	<div class="wrap_synopsis">	
 		<div class="my_synopsis">
