--- a/wechat/src/main/webapp/xcview/html/my_study.html
+++ b/wechat/src/main/webapp/xcview/html/my_study.html
@@ -139,7 +139,7 @@
 						</div>
 						<div class="" style="width: 4.5rem; float: left;">
 						
-						<p class="text_more">{{item.gradeName}}</span></p>
+						<p class="text_mores">{{item.gradeName}}</span></p>
 						<p class="text_more"><span class="span">{{item.name}}</span></p>
 						
 						{{if item.type==1 && item.collection==true}}
