--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -254,6 +254,7 @@
 			<div class="message">
 				<div class="message_name">
 					<div class="name">{{items.lecturerInfo.name}}</div>
+					<div class="name" style="font-size: 0.24rem;color: #999999;">{{items.lecturerInfo.title}}</div>
 					<!--<div class="message_characteristic">我的师傅</div>-->
 					<div class="both"></div>
 				</div>
